Closed Bug 951413 Opened 11 years ago Closed 11 years ago

Intermittent browser_dbg_conditional-breakpoints-03.js | leaked until shutdown [nsGlobalWindow #xxxx http://example.com/browser/browser/devtools/debugger/test/doc_conditional-breakpoints.html]

Categories

(DevTools :: Debugger, defect)

x86_64
macOS
defect
Not set
normal

Tracking

(firefox27 unaffected, firefox28 fixed, firefox29 fixed, firefox-esr24 unaffected)

RESOLVED FIXED
Firefox 29
Tracking Status
firefox27 --- unaffected
firefox28 --- fixed
firefox29 --- fixed
firefox-esr24 --- unaffected

People

(Reporter: RyanVM, Assigned: shu)

References

Details

(Keywords: intermittent-failure, memory-leak)

Attachments

(1 file, 1 obsolete file)

+++ This bug was initially created as a clone of Bug #949162 +++ https://tbpl.mozilla.org/php/getParsedLog.php?id=32097607&tree=Mozilla-Inbound Rev5 MacOSX Mountain Lion 10.8 mozilla-inbound opt test mochitest-browser-chrome on 2013-12-17 09:04:55 PST for push bee6174bea6b slave: talos-mtnlion-r5-032 09:38:40 WARNING - TEST-UNEXPECTED-FAIL | chrome://mochitests/content/browser/browser/devtools/debugger/test/browser_dbg_conditional-breakpoints-03.js | leaked until shutdown [nsGlobalWindow #9587 http://example.com/browser/browser/devtools/debugger/test/doc_conditional-breakpoints.html] 09:38:40 WARNING - TEST-UNEXPECTED-FAIL | chrome://mochitests/content/browser/browser/devtools/debugger/test/browser_dbg_conditional-breakpoints-03.js | leaked until shutdown [nsGlobalWindow #9585 http://example.com/browser/browser/devtools/debugger/test/doc_conditional-breakpoints.html]
I believe this is a regression from bug 933483
As discussed on IRC, unsuppressing events in |nsGlobalWindow::DropOutWindowDocs| fixes the leak for me locally.
Flags: needinfo?(mrbkap)
ughhhhhhhhh
Attachment #8350248 - Flags: review?(mrbkap)
Assignee: nobody → shu
Status: NEW → ASSIGNED
Comment on attachment 8350248 [details] [diff] [review] Unsuppress events on dropping doc from outer window. rs=mrbkap but please file a followup on doing this right (as discussed on IRC).
Attachment #8350248 - Flags: review?(mrbkap) → review+
Flags: needinfo?(mrbkap)
The patch looks wrong. We shouldn't unsuppress random documents. Only documents which the nsGlobalWindow itself has suppressed.
Though, no one should be able to bring such documents back to a visible window, so not too bad bug. But in any case, caller who suppress, should also unsuppress.
(In reply to Olli Pettay [:smaug] from comment #7) > Though, no one should be able to bring such documents back to a visible > window, so not too bad > bug. > > But in any case, caller who suppress, should also unsuppress. Why should documents that get closed/navigated away from keep its suppression state?
Attempt #2. What's going on in the devtools test is that it has 3 sets of {pre,post}Nest which suppresses/unsuppresses event handling on the same window. The postNests *all* race with window closure so that when we are inside FreeInnerObjects the suppression depth might be > 1. This patch loops until we have actually unsuppressed the docs.
Attachment #8350357 - Flags: review?(bugs)
Attachment #8350248 - Attachment is obsolete: true
Attachment #8350357 - Flags: review?(bugs) → review+
(In reply to Blake Kaplan (:mrbkap) from comment #5) > Comment on attachment 8350248 [details] [diff] [review] > Unsuppress events on dropping doc from outer window. > > rs=mrbkap but please file a followup on doing this right (as discussed on > IRC). Filed bug 952318.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 29
Thanks for looking into this!
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [leave open]
Blocks: 952070
Intermittents seem to have stopped.
Status: REOPENED → RESOLVED
Closed: 11 years ago11 years ago
Resolution: --- → FIXED
Whiteboard: [leave open]
Looks like this applies to Aurora as well. Is there any reason we shouldn't uplift this to it?
Comment on attachment 8350357 [details] [diff] [review] Really unsuppress inner window docs on detach from docshell. [Approval Request Comment] Bug caused by (feature/regressing bug #): 933483 User impact if declined: Leaks Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): None String or IDL/UUID changes made by this patch: None
Attachment #8350357 - Flags: approval-mozilla-aurora?
Flags: needinfo?(shu)
Attachment #8350357 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
I still hit the failures with this backed out. Re-landed. https://hg.mozilla.org/releases/mozilla-aurora/rev/89c68fcb1448
Product: Firefox → DevTools
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: