Bug 951413 - Really unsuppress inner window docs on detach from docshell. (r=smaug)